grab top 5 middle curvature mean molecules

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -762,12 +762,12 @@
    "outputs": [],
    "source": [
     "# for each sample type, we want to quantify the sharpness of the turn in the middle X% of the traces for each grain\n",
-    "middle_distance_nm = 14\n",
+    "middle_distance_nm = 10\n",
     "\n",
     "bad_grains_middle_curvature_analysis = []\n",
-    "grain_dicts_middle_curvature_analysis = {}\n",
+    "grains_dicts_middle_curvature_analysis = {}\n",
     "for sample_type, grains_dict_sample in grains_dicts_curvature_defects.items():\n",
-    "    grain_dicts_middle_curvature_analysis[sample_type] = {}\n",
+    "    grains_dicts_middle_curvature_analysis[sample_type] = {}\n",
     "    for grain_index, grain_data in grains_dict_sample.items():\n",
     "        grain_image = grain_data[\"image\"]\n",
     "        grain_mask = grain_data[\"predicted_mask\"]\n",
@@ -812,22 +812,22 @@
     "        middle_sum_curvature = np.sum(middle_path_curvatures)\n",
     "\n",
     "        # store\n",
-    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index] = grain_data.copy()\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index] = grain_data.copy()\n",
     "\n",
-    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
     "            \"middle_path_mean_curvature\"\n",
     "        ] = middle_mean_curvature\n",
-    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
     "            \"middle_path_std_curvature\"\n",
     "        ] = middle_std_curvature\n",
-    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\"middle_path_px\"] = middle_path_px\n",
-    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\"middle_path_px\"] = middle_path_px\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
     "            \"middle_path_curvatures\"\n",
     "        ] = middle_path_curvatures\n",
-    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
     "            \"middle_cumulative_resampled_distances_nm\"\n",
     "        ] = middle_cumulative_resampled_distances_nm\n",
-    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
     "            \"middle_path_sum_curvature\"\n",
     "        ] = middle_sum_curvature\n",
     "\n",
@@ -835,7 +835,7 @@
     "\n",
     "if False:\n",
     "    # plot the middle curvature analysis\n",
-    "    for sample_type, grain_dict in grain_dicts_middle_curvature_analysis.items():\n",
+    "    for sample_type, grain_dict in grains_dicts_middle_curvature_analysis.items():\n",
     "        plot_all_grains_dictionary(\n",
     "            grain_dict=grain_dict,\n",
     "            vmin=VMIN,\n",
@@ -874,11 +874,12 @@
    "source": [
     "# plot the distributions of middle curvature stats\n",
     "all_middle_curvature_stats = []\n",
-    "for sample_type, grain_dict in grain_dicts_middle_curvature_analysis.items():\n",
+    "for sample_type, grain_dict in grains_dicts_middle_curvature_analysis.items():\n",
     "    for grain_index, grain_data in grain_dict.items():\n",
     "        all_middle_curvature_stats.append(\n",
     "            {\n",
     "                \"sample_type\": sample_type,\n",
+    "                \"grain_index\": grain_index,\n",
     "                \"mean_curvature\": grain_data[\"middle_path_mean_curvature\"],\n",
     "                \"std_curvature\": grain_data[\"middle_path_std_curvature\"],\n",
     "                \"sum_curvature\": grain_data[\"middle_path_sum_curvature\"],\n",
@@ -970,6 +971,7 @@
     "\n",
     "    return normality_results, is_homogeneous\n",
     "\n",
+    "\n",
     "def decide_test(normality_results, is_homogeneous):\n",
     "    if all(normality_results.values()) and is_homogeneous:\n",
     "        return \"anova\"\n",
@@ -993,6 +995,7 @@
     "    plt.suptitle(\"Q-Q Plots (should be linear if normal)\", fontsize=16)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
     "\n",
     "def run_tests(recommended_test: str, data_df: pd.DataFrame, column: str, sample_differentiator_column: str):\n",
     "    if recommended_test == \"anova\":\n",
@@ -1036,6 +1039,7 @@
     "        else:\n",
     "            print(\"No significant differences found\")\n",
     "\n",
+    "\n",
     "def decide_and_run_stats_tests(data_df: pd.DataFrame, column: str, sample_differentiator_column: str):\n",
     "\n",
     "    print(f\"\\n\\n=== running stats tests for column [{column}]\")\n",
@@ -1058,6 +1062,7 @@
     "        sample_differentiator_column=sample_differentiator_column,\n",
     "    )\n",
     "\n",
+    "\n",
     "decide_and_run_stats_tests(\n",
     "    data_df=df_all_middle_curvature_stats, column=\"sum_curvature\", sample_differentiator_column=\"sample_type\"\n",
     ")\n",
@@ -1071,18 +1076,68 @@
     ")\n",
     "\n",
     "\n",
+    "def t_test_between_two_samples(data_df: pd.DataFrame, sample_type_1: str, sample_type_2: str, column: str):\n",
+    "    data1 = data_df[data_df[\"sample_type\"] == sample_type_1][column]\n",
+    "    data2 = data_df[data_df[\"sample_type\"] == sample_type_2][column]\n",
+    "    t_stat, p_value = ttest_ind(data1, data2, equal_var=False)\n",
+    "    print(\n",
+    "        f\"\\n\\nT-test between [{sample_type_1}] and [{sample_type_2}] for [{column}]: T={t_stat:.4f}, p={p_value:.4f}\"\n",
+    "    )\n",
+    "    if p_value < 0.05:\n",
+    "        print(\"Significant differences found\")\n",
+    "    else:\n",
+    "        print(\"No significant differences found\")\n",
+    "\n",
+    "\n",
     "# just run a t-test between OT1 and OT2\n",
+    "t_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"mean_curvature\"\n",
+    ")\n",
     "\n",
-    "ot1_data = df_all_middle_curvature_stats[df_all_middle_curvature_stats[\"sample_type\"] == \"OT1_SC\"][\"mean_curvature\"]\n",
-    "ot2_data = df_all_middle_curvature_stats[df_all_middle_curvature_stats[\"sample_type\"] == \"OT2_SC\"][\"mean_curvature\"]\n",
+    "t_test_between_two_samples(\n",
+    "    data_df=df_all_middle_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"sum_curvature\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a436d54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show representative molecules of high and low mean curvature in the middle\n",
+    "# find the grain indexes of molecuels with high mean curvature in the middle for OT2\n",
     "\n",
+    "# grab the top say 5 molecules\n",
+    "sorted_mean_curvature_ot2 = df_all_middle_curvature_stats[df_all_middle_curvature_stats[\"sample_type\"] == \"OT2_SC\"][\n",
+    "    \"mean_curvature\"\n",
+    "].sort_values(ascending=False)\n",
+    "top_mean_curvature_ot2_df_indexes = sorted_mean_curvature_ot2.index[:5].tolist()\n",
+    "# grab the molecules' grain_indexes\n",
+    "df_top_mean_curvature_ot2_molecules = df_all_middle_curvature_stats.loc[top_mean_curvature_ot2_df_indexes]\n",
+    "top_mean_curvature_ot2_grain_indexes = df_top_mean_curvature_ot2_molecules[\"grain_index\"].tolist()\n",
+    "print(top_mean_curvature_ot2_grain_indexes)\n",
+    "# grab the molecules from the grains dictionary\n",
+    "top_mean_curvature_ot2_molecules = {}\n",
+    "for grain_index in top_mean_curvature_ot2_grain_indexes:\n",
+    "    top_mean_curvature_ot2_molecules[grain_index] = grains_dicts_middle_curvature_analysis[\"OT2_SC\"][grain_index]\n",
     "\n",
-    "t_stat, p_value = ttest_ind(ot1_data, ot2_data, equal_var=False)\n",
-    "print(f\"T-test between OT1 and OT2: T={t_stat:.4f}, p={p_value:.4f}\")\n",
-    "if p_value < 0.05:\n",
-    "    print(\"Significant differences found\")\n",
-    "else:\n",
-    "    print(\"No significant differences found\")\n"
+    "# plot them\n",
+    "plot_all_grains_dictionary(\n",
+    "    grain_dict=top_mean_curvature_ot2_molecules,\n",
+    "    plot_lineplots=[\n",
+    "        [\n",
+    "            \"middle_cumulative_resampled_distances_nm\",\n",
+    "            \"middle_path_curvatures\",\n",
+    "            \"distance (nm)\",\n",
+    "            \"curvature (rad/nm)\",\n",
+    "            \"Curvature\",\n",
+    "            (0.0, 0.5),\n",
+    "        ]\n",
+    "    ],\n",
+    "\n",
+    ")"
    ]
   }
  ],
