add ability to list stats in figure titles

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -153,6 +153,7 @@
     "    wspace_inner: float = 0.15,\n",
     "    hspace_inner: float = 0.3,\n",
     "    num_grains_to_limit_to: int | None = None,\n",
+    "    stats_to_include_in_title: list[str] = None,\n",
     ") -> None:\n",
     "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
     "    num_grains = len(grain_dict.keys())\n",
@@ -192,7 +193,16 @@
     "        # plot image\n",
     "        image_ax = plt.Subplot(fig, inner[0, 0])\n",
     "        image_ax.imshow(grain_image, vmin=vmin, vmax=vmax, cmap=cmap)\n",
-    "        image_ax.set_title(f\"Grain {grain_index}\\np_to_nm: {grain_p_to_nm:.2f} nm/px\", fontsize=fontsize, pad=2)\n",
+    "        title = f\"Grain {grain_index}\\np_to_nm: {grain_p_to_nm:.2f} nm/px\"\n",
+    "        if stats_to_include_in_title is not None:\n",
+    "            for stat in stats_to_include_in_title:\n",
+    "                stat_value = grain_data[stat]\n",
+    "                if isinstance(stat_value, float):\n",
+    "                    title += f\"\\n{stat}: {stat_value:.2f}\"\n",
+    "                else:\n",
+    "                    title += f\"\\n{stat}: {stat_value}\"\n",
+    "            title += \"\\n\"\n",
+    "        image_ax.set_title(title, fontsize=fontsize, pad=2)\n",
     "        image_ax.axis(\"off\")\n",
     "        fig.add_subplot(image_ax)\n",
     "\n",
