add grabbing outer (not middle) path coords & curvature values

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -813,6 +813,18 @@
     "            middle_start_index:middle_end_index\n",
     "        ]\n",
     "\n",
+    "        # Grab the start and end (not middle) region path pixels\n",
+    "        outer_path_px = np.concatenate((resampled_path_px[:middle_start_index], resampled_path_px[middle_end_index:]))\n",
+    "        outer_path_curvatures = np.concatenate(\n",
+    "            (path_abs_curvatures[:middle_start_index], path_abs_curvatures[middle_end_index:])\n",
+    "        )\n",
+    "        outer_cumulative_resampled_distances_nm = np.concatenate(\n",
+    "            (\n",
+    "                cumulative_resampled_distances_nm[:middle_start_index],\n",
+    "                cumulative_resampled_distances_nm[middle_end_index:],\n",
+    "            )\n",
+    "        )\n",
+    "\n",
     "        if len(middle_path_px) < 5:\n",
     "            bad_grains_middle_curvature_analysis.append(grain_index)\n",
     "            continue\n",
@@ -820,6 +832,10 @@
     "        middle_mean_curvature = np.mean(middle_path_curvatures)\n",
     "        middle_std_curvature = np.std(middle_path_curvatures)\n",
     "        middle_sum_curvature = np.sum(middle_path_curvatures)\n",
+    "\n",
+    "        outer_mean_curvature = np.mean(outer_path_curvatures)\n",
+    "        outer_std_curvature = np.std(outer_path_curvatures)\n",
+    "        # don't use the sum, since the amount of data in this region is not constant between all molecules\n",
     "\n",
     "        # store\n",
     "        grains_dicts_middle_curvature_analysis[sample_type][grain_index] = grain_data.copy()\n",
@@ -840,6 +856,13 @@
     "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
     "            \"middle_path_sum_curvature\"\n",
     "        ] = middle_sum_curvature\n",
+    "\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "            \"outer_path_mean_curvature\"\n",
+    "        ] = outer_mean_curvature\n",
+    "        grains_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "            \"outer_path_std_curvature\"\n",
+    "        ] = outer_std_curvature\n",
     "\n",
     "print(f\"Bad grains for middle curvature analysis: {bad_grains_middle_curvature_analysis}\")\n",
     "\n",
