add plotting and stats tests for outer (not middle) path curvatures

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -901,77 +901,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddb078d0",
+   "id": "dec9d4e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the distributions of middle curvature stats\n",
-    "all_middle_curvature_stats = []\n",
-    "for sample_type, grain_dict in grains_dicts_middle_curvature_analysis.items():\n",
-    "    for grain_index, grain_data in grain_dict.items():\n",
-    "        all_middle_curvature_stats.append(\n",
-    "            {\n",
-    "                \"sample_type\": sample_type,\n",
-    "                \"grain_index\": grain_index,\n",
-    "                \"mean_curvature\": grain_data[\"middle_path_mean_curvature\"],\n",
-    "                \"std_curvature\": grain_data[\"middle_path_std_curvature\"],\n",
-    "                \"sum_curvature\": grain_data[\"middle_path_sum_curvature\"],\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "df_all_middle_curvature_stats = pd.DataFrame(all_middle_curvature_stats)\n",
-    "\n",
-    "# plot mean curvatures\n",
-    "sns.stripplot(x=\"sample_type\", y=\"mean_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
-    "sns.violinplot(\n",
-    "    x=\"sample_type\",\n",
-    "    y=\"mean_curvature\",\n",
-    "    data=df_all_middle_curvature_stats,\n",
-    "    color=\"lightblue\",\n",
-    "    inner=None,\n",
-    "    linewidth=0.5,\n",
-    "    alpha=0.5,\n",
-    ")\n",
-    "plt.title(\"Mean Curvature by Sample Type\")\n",
-    "plt.ylabel(\"Mean curvature (rad/nm)\")\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "# plot std curvatures\n",
-    "sns.stripplot(x=\"sample_type\", y=\"std_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
-    "sns.violinplot(\n",
-    "    x=\"sample_type\",\n",
-    "    y=\"std_curvature\",\n",
-    "    data=df_all_middle_curvature_stats,\n",
-    "    color=\"lightblue\",\n",
-    "    inner=None,\n",
-    "    linewidth=0.5,\n",
-    "    alpha=0.5,\n",
-    ")\n",
-    "plt.title(\"Std Curvature by Sample Type\")\n",
-    "plt.ylabel(\"Std curvature (rad/nm)\")\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "# plot sum curvatures\n",
-    "sns.stripplot(x=\"sample_type\", y=\"sum_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
-    "sns.violinplot(\n",
-    "    x=\"sample_type\",\n",
-    "    y=\"sum_curvature\",\n",
-    "    data=df_all_middle_curvature_stats,\n",
-    "    color=\"lightblue\",\n",
-    "    inner=None,\n",
-    "    linewidth=0.5,\n",
-    "    alpha=0.5,\n",
-    ")\n",
-    "plt.title(\"Sum Curvature by Sample Type\")\n",
-    "plt.ylabel(\"Sum curvature (rad/nm)\")\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
+    "# Stats tests functions\n",
     "# test for normality to decide between parametric (ANOVA) vs non-parametric (Kruskal-Wallis) tests\n",
     "from scipy.stats import shapiro, levene, kruskal, f_oneway, ttest_ind\n",
     "import scipy.stats as scipy_stats\n",
@@ -1095,6 +1029,145 @@
     "        sample_differentiator_column=sample_differentiator_column,\n",
     "    )\n",
     "\n",
+    "def t_test_between_two_samples(data_df: pd.DataFrame, sample_type_1: str, sample_type_2: str, column: str):\n",
+    "    data1 = data_df[data_df[\"sample_type\"] == sample_type_1][column]\n",
+    "    data2 = data_df[data_df[\"sample_type\"] == sample_type_2][column]\n",
+    "    t_stat, p_value = ttest_ind(data1, data2, equal_var=False)\n",
+    "    print(\n",
+    "        f\"\\n\\nT-test between [{sample_type_1}] and [{sample_type_2}] for [{column}]: T={t_stat:.4f}, p={p_value:.4f}\"\n",
+    "    )\n",
+    "    if p_value < 0.05:\n",
+    "        print(\"Significant differences found\")\n",
+    "    else:\n",
+    "        print(\"No significant differences found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb078d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the distributions of middle curvature stats\n",
+    "all_middle_curvature_stats = []\n",
+    "all_outer_curvature_stats = []\n",
+    "for sample_type, grain_dict in grains_dicts_middle_curvature_analysis.items():\n",
+    "    for grain_index, grain_data in grain_dict.items():\n",
+    "        all_middle_curvature_stats.append(\n",
+    "            {\n",
+    "                \"sample_type\": sample_type,\n",
+    "                \"grain_index\": grain_index,\n",
+    "                \"mean_curvature\": grain_data[\"middle_path_mean_curvature\"],\n",
+    "                \"std_curvature\": grain_data[\"middle_path_std_curvature\"],\n",
+    "                \"sum_curvature\": grain_data[\"middle_path_sum_curvature\"],\n",
+    "            }\n",
+    "        )\n",
+    "        all_outer_curvature_stats.append(\n",
+    "            {\n",
+    "                \"sample_type\": sample_type,\n",
+    "                \"grain_index\": grain_index,\n",
+    "                \"mean_curvature\": grain_data[\"outer_path_mean_curvature\"],\n",
+    "                \"std_curvature\": grain_data[\"outer_path_std_curvature\"],\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "df_all_middle_curvature_stats = pd.DataFrame(all_middle_curvature_stats)\n",
+    "df_all_outer_curvature_stats = pd.DataFrame(all_outer_curvature_stats)\n",
+    "\n",
+    "# middle curvatures\n",
+    "# mean\n",
+    "print(\"\\n\\n===== middle curvatures plot =====\")\n",
+    "sns.stripplot(x=\"sample_type\", y=\"mean_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"mean_curvature\",\n",
+    "    data=df_all_middle_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"Middle mean Curvature by Sample Type\")\n",
+    "plt.ylabel(\"Middle mean curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# std\n",
+    "sns.stripplot(x=\"sample_type\", y=\"std_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"std_curvature\",\n",
+    "    data=df_all_middle_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"Middle std Curvature by Sample Type\")\n",
+    "plt.ylabel(\"Middle std curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# sum\n",
+    "sns.stripplot(x=\"sample_type\", y=\"sum_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"sum_curvature\",\n",
+    "    data=df_all_middle_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"Middle sum Curvature by Sample Type\")\n",
+    "plt.ylabel(\"Middle sum curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# outer curvatures\n",
+    "# mean\n",
+    "print(\"\\n\\n===== outer curvatures plot =====\")\n",
+    "\n",
+    "sns.stripplot(x=\"sample_type\", y=\"mean_curvature\", data=df_all_outer_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"mean_curvature\",\n",
+    "    data=df_all_outer_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"outer mean Curvature by Sample Type\")\n",
+    "plt.ylabel(\"outer mean curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# std\n",
+    "sns.stripplot(x=\"sample_type\", y=\"std_curvature\", data=df_all_outer_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"std_curvature\",\n",
+    "    data=df_all_outer_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"outer std Curvature by Sample Type\")\n",
+    "plt.ylabel(\"outer std curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\n===== middle curvatures stats =====\")\n",
+    "\n",
     "\n",
     "decide_and_run_stats_tests(\n",
     "    data_df=df_all_middle_curvature_stats, column=\"sum_curvature\", sample_differentiator_column=\"sample_type\"\n",
@@ -1108,20 +1181,6 @@
     "    data_df=df_all_middle_curvature_stats, column=\"std_curvature\", sample_differentiator_column=\"sample_type\"\n",
     ")\n",
     "\n",
-    "\n",
-    "def t_test_between_two_samples(data_df: pd.DataFrame, sample_type_1: str, sample_type_2: str, column: str):\n",
-    "    data1 = data_df[data_df[\"sample_type\"] == sample_type_1][column]\n",
-    "    data2 = data_df[data_df[\"sample_type\"] == sample_type_2][column]\n",
-    "    t_stat, p_value = ttest_ind(data1, data2, equal_var=False)\n",
-    "    print(\n",
-    "        f\"\\n\\nT-test between [{sample_type_1}] and [{sample_type_2}] for [{column}]: T={t_stat:.4f}, p={p_value:.4f}\"\n",
-    "    )\n",
-    "    if p_value < 0.05:\n",
-    "        print(\"Significant differences found\")\n",
-    "    else:\n",
-    "        print(\"No significant differences found\")\n",
-    "\n",
-    "\n",
     "# just run a t-test between OT1 and OT2\n",
     "t_test_between_two_samples(\n",
     "    data_df=df_all_middle_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"mean_curvature\"\n",
@@ -1129,7 +1188,23 @@
     "\n",
     "t_test_between_two_samples(\n",
     "    data_df=df_all_middle_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"sum_curvature\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(\"\\n\\n===== outer curvatures stats =====\")\n",
+    "\n",
+    "decide_and_run_stats_tests(\n",
+    "    data_df=df_all_outer_curvature_stats, column=\"mean_curvature\", sample_differentiator_column=\"sample_type\"\n",
+    ")\n",
+    "\n",
+    "decide_and_run_stats_tests(\n",
+    "    data_df=df_all_outer_curvature_stats, column=\"std_curvature\", sample_differentiator_column=\"sample_type\"\n",
+    ")\n",
+    "\n",
+    "# just run a t-test between OT1 and OT2\n",
+    "t_test_between_two_samples(\n",
+    "    data_df=df_all_outer_curvature_stats, sample_type_1=\"OT1_SC\", sample_type_2=\"OT2_SC\", column=\"mean_curvature\"\n",
+    ")\n",
+    "\n"
    ]
   },
   {
