add getting and plotting molecules with the highest/lowest middle region mean curvatures

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -1215,25 +1215,47 @@
    "outputs": [],
    "source": [
     "# show representative molecules of high and low mean curvature in the middle\n",
-    "# find the grain indexes of molecuels with high mean curvature in the middle for OT2\n",
+    "# find the grain indexes of molecuels with high mean curvature in the middle for OT2 & OT1\n",
     "\n",
-    "# grab the top say 5 molecules\n",
-    "sorted_mean_curvature_ot2 = df_all_middle_curvature_stats[df_all_middle_curvature_stats[\"sample_type\"] == \"OT2_SC\"][\n",
-    "    \"mean_curvature\"\n",
-    "].sort_values(ascending=False)\n",
-    "top_mean_curvature_ot2_df_indexes = sorted_mean_curvature_ot2.index[:5].tolist()\n",
-    "# grab the molecules' grain_indexes\n",
-    "df_top_mean_curvature_ot2_molecules = df_all_middle_curvature_stats.loc[top_mean_curvature_ot2_df_indexes]\n",
-    "top_mean_curvature_ot2_grain_indexes = df_top_mean_curvature_ot2_molecules[\"grain_index\"].tolist()\n",
-    "print(top_mean_curvature_ot2_grain_indexes)\n",
-    "# grab the molecules from the grains dictionary\n",
-    "top_mean_curvature_ot2_molecules = {}\n",
-    "for grain_index in top_mean_curvature_ot2_grain_indexes:\n",
-    "    top_mean_curvature_ot2_molecules[grain_index] = grains_dicts_middle_curvature_analysis[\"OT2_SC\"][grain_index]\n",
+    "\n",
+    "def get_mols_with_high_low_stat(\n",
+    "    grains_dict: dict[str, dict], stat_name: str, number: int, highest_lowest: str\n",
+    ") -> dict[str, dict]:\n",
+    "    \"\"\"Get molecules with the highest or lowest specified statistic.\"\"\"\n",
+    "\n",
+    "    # get a list of tuples of grain indexes with the corresponding stat\n",
+    "    grain_stats = [(grain_index, grain_data[stat_name]) for grain_index, grain_data in grains_dict.items()]\n",
+    "\n",
+    "    if highest_lowest == \"highest\":\n",
+    "        # sort the statistic\n",
+    "        grain_stats_sorted = sorted(grain_stats, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "    elif highest_lowest == \"lowest\":\n",
+    "        # sort the statistic\n",
+    "        grain_stats_sorted = sorted(grain_stats, key=lambda x: x[1])\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid value for highest_lowest. Use 'highest' or 'lowest'.\")\n",
+    "\n",
+    "    # get the grains and return them\n",
+    "    grains_to_return = {}\n",
+    "    for grain_index, _ in grain_stats_sorted[:number]:\n",
+    "        grains_to_return[grain_index] = grains_dict[grain_index]\n",
+    "\n",
+    "    return grains_to_return\n",
+    "\n",
+    "\n",
+    "# OT2\n",
+    "\n",
+    "highest_middle_curvature_mean_ot2_molecules = get_mols_with_high_low_stat(\n",
+    "    grains_dict=grains_dicts_middle_curvature_analysis[\"OT2_SC\"],\n",
+    "    stat_name=\"middle_path_mean_curvature\",\n",
+    "    number=5,\n",
+    "    highest_lowest=\"highest\",\n",
+    ")\n",
     "\n",
     "# plot them\n",
     "plot_all_grains_dictionary(\n",
-    "    grain_dict=top_mean_curvature_ot2_molecules,\n",
+    "    grain_dict=highest_middle_curvature_mean_ot2_molecules,\n",
     "    plot_lineplots=[\n",
     "        [\n",
     "            \"middle_cumulative_resampled_distances_nm\",\n",
@@ -1244,9 +1266,91 @@
     "            (0.0, 0.5),\n",
     "        ]\n",
     "    ],\n",
+    "    stats_to_include_in_title=[\n",
+    "        \"middle_path_mean_curvature\",\n",
+    "    ],\n",
+    ")\n",
     "\n",
+    "lowest_middle_curvature_mean_ot2_molecules = get_mols_with_high_low_stat(\n",
+    "    grains_dict=grains_dicts_middle_curvature_analysis[\"OT2_SC\"],\n",
+    "    stat_name=\"middle_path_mean_curvature\",\n",
+    "    number=5,\n",
+    "    highest_lowest=\"lowest\",\n",
+    ")\n",
+    "\n",
+    "plot_all_grains_dictionary(\n",
+    "    grain_dict=lowest_middle_curvature_mean_ot2_molecules,\n",
+    "    plot_lineplots=[\n",
+    "        [\n",
+    "            \"middle_cumulative_resampled_distances_nm\",\n",
+    "            \"middle_path_curvatures\",\n",
+    "            \"distance (nm)\",\n",
+    "            \"curvature (rad/nm)\",\n",
+    "            \"Curvature\",\n",
+    "            (0.0, 0.5),\n",
+    "        ]\n",
+    "    ],\n",
+    "    stats_to_include_in_title=[\n",
+    "        \"middle_path_mean_curvature\",\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "# OT1\n",
+    "highest_middle_curvature_mean_ot1_molecules = get_mols_with_high_low_stat(\n",
+    "    grains_dict=grains_dicts_middle_curvature_analysis[\"OT1_SC\"],\n",
+    "    stat_name=\"middle_path_mean_curvature\",\n",
+    "    number=5,\n",
+    "    highest_lowest=\"highest\",\n",
+    ")\n",
+    "\n",
+    "# plot them\n",
+    "plot_all_grains_dictionary(\n",
+    "    grain_dict=highest_middle_curvature_mean_ot1_molecules,\n",
+    "    plot_lineplots=[\n",
+    "        [\n",
+    "            \"middle_cumulative_resampled_distances_nm\",\n",
+    "            \"middle_path_curvatures\",\n",
+    "            \"distance (nm)\",\n",
+    "            \"curvature (rad/nm)\",\n",
+    "            \"Curvature\",\n",
+    "            (0.0, 0.5),\n",
+    "        ]\n",
+    "    ],\n",
+    "    stats_to_include_in_title=[\n",
+    "        \"middle_path_mean_curvature\",\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "lowest_middle_curvature_mean_ot1_molecules = get_mols_with_high_low_stat(\n",
+    "    grains_dict=grains_dicts_middle_curvature_analysis[\"OT1_SC\"],\n",
+    "    stat_name=\"middle_path_mean_curvature\",\n",
+    "    number=5,\n",
+    "    highest_lowest=\"lowest\",\n",
+    ")\n",
+    "\n",
+    "plot_all_grains_dictionary(\n",
+    "    grain_dict=lowest_middle_curvature_mean_ot1_molecules,\n",
+    "    plot_lineplots=[\n",
+    "        [\n",
+    "            \"middle_cumulative_resampled_distances_nm\",\n",
+    "            \"middle_path_curvatures\",\n",
+    "            \"distance (nm)\",\n",
+    "            \"curvature (rad/nm)\",\n",
+    "            \"Curvature\",\n",
+    "            (0.0, 0.5),\n",
+    "        ]\n",
+    "    ],\n",
+    "    stats_to_include_in_title=[\n",
+    "        \"middle_path_mean_curvature\",\n",
+    "    ],\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c5265f3",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
