add removal of incorrectly sized molecules (wrong p2nm)

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -340,6 +340,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aa40f0c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove anomalous grains by index\n",
+    "grains_to_remove_on_sc = []\n",
+    "grains_to_remove_ot1_sc = [21, 22]  # 21 and 22 have the wrong pixel to nm scaling and I don't want to guess, so\n",
+    "# just remove them\n",
+    "grains_to_remove_ot2_sc = []\n",
+    "\n",
+    "# remove the grains\n",
+    "for sample_type, grains_to_remove in zip(\n",
+    "    [\"ON_SC\", \"OT1_SC\", \"OT2_SC\"], [grains_to_remove_on_sc, grains_to_remove_ot1_sc, grains_to_remove_ot2_sc]\n",
+    "):\n",
+    "    for grain_index in grains_to_remove:\n",
+    "        if grain_index in grains_dicts[sample_type]:\n",
+    "            print(f\"Removing grain {grain_index} from sample type [{sample_type}]\")\n",
+    "            del grains_dicts[sample_type][grain_index]\n",
+    "\n",
+    "# print new numbers for sample types\n",
+    "for sample_type in [\"ON_SC\", \"OT1_SC\", \"OT2_SC\"]:\n",
+    "    print(f\"Number of grains in sample type [{sample_type}]: {len(grains_dicts[sample_type])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bb72405f",
    "metadata": {},
    "outputs": [],
